--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 
 
-.color-match {
+.color {
     color: pink;
     font-size: 50px;
     background-color: black;
+    width: 30%;
+    text-align: center;
+}
+.color {
+    display: inline-block;
 }
