--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@
     color: pink;
     font-size: 50px;
     background-color: black;
-    width: 30%;
+    width: 20%;
     text-align: center;
 }
 .color {
     display: inline-block;
+}
+.addColor {
+    background-color: #581845;
+    color: white;
+}
+.button {
+    display: inline-block;
+    width: 100px;
+    height: 60px;
 }
