--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     color: pink;
     font-size: 50px;
     background-color: black;
-    width: 20%;
+    width: 30%;
+    padding: 10px;
+    margin: 10px;
     text-align: center;
 }
 .color {
