--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .color {
     color: pink;
     font-size: 50px;
@@ -9,15 +7,22 @@
     margin: 10px;
     text-align: center;
 }
+
 .color {
     display: inline-block;
 }
+
 .addColor {
     background-color: #581845;
     color: white;
 }
+
 .button {
+    margin-left: 10px;
+    background-color: #581845;
+    color: aliceblue;
+    border: 1px solid whitesmoke;
     display: inline-block;
-    width: 100px;
+    width: 31.7%;
     height: 60px;
 }
